--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta http-equiv = "refresh" content = "2; url = https://dean.eigenmann.me" />
   </head>
   <body>
    
